basic pokemon display finished

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        
-        <form>
-            Enter name:<br>
-            <input type="text" name="name"><br>
-        </form>
+        <div id="user-container">
+            <form>
+                Enter name:<br>
+                <input type="text" name="name"><br>
+            </form>
+        </div>
         <div id="selected-pokemon">
 
         </div>
