user submit working

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <div id="user-container">
-            <form>
+            <form id="submit-name">
                 Enter name:<br>
-                <input type="text" name="name"><br>
+                <input id="name-input" type="text" name="name"><br>
+                <input type="submit">
             </form>
         </div>
         <div id="selected-pokemon">
