--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
     <head>
         <title>Pokemon Battle</title>
         <link rel="stylesheet" href="styles.css">
+        <script type="text/javascript" src="battle.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
-    <body>
+    <body id="main-body">
         <div id="user-container">
-            <form id="submit-name">
-                Enter name:<br>
-                <input id="name-input" type="text" name="name"><br>
-                <input type="submit">
-            </form>
+            
         </div>
         <div id="selected-pokemon">
 
