opp screen done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Pokemon Battle</title>
         <link rel="stylesheet" href="styles.css">
-        <script type="text/javascript" src="battle.js"></script>
+        <!-- <script type="text/javascript" src="battle.js"></script> -->
+        <script type="text/javascript" src="disOpp.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body id="main-body">
