--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Pokemon Battle</title>
         <link rel="stylesheet" href="styles.css">
+        <script type="text/javascript" src="Player.js"></script>
+        <script type="text/javascript" src="Pokemon.js"></script>
         <script type="text/javascript" src="battle.js"></script>
         <script type="text/javascript" src="disOpp.js"></script>
         <script type="text/javascript" src="index.js"></script>
