--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <script type="text/javascript" src="Player.js"></script>
         <script type="text/javascript" src="Pokemon.js"></script>
+        <script type="text/javascript" src="drawBattle.js"></script>
         <script type="text/javascript" src="battle.js"></script>
         <script type="text/javascript" src="disOpp.js"></script>
         <script type="text/javascript" src="index.js"></script>
