--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <script type="text/javascript" src="battle.js"></script>
         <script type="text/javascript" src="disOpp.js"></script>
         <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="sounds.js"></script>
     </head>
     <body id="main-body">
+
         
     </body>
 </html>
