--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Pokemon Battle</title>
+        <meta property="og:title" content="Radouane Bahi's Pokemon Battle" />
+        <meta property="og:image" content="https://radbahi.github.io/pokemon_battle_frontend/pokemon-symbol-logo-png-31.png" />
+        <meta property="og:description" content="A project made by Radouane Bahi and Tom Donovan" />
         <link rel="stylesheet" href="styles.css">
         <script type="text/javascript" src="Player.js"></script>
         <script type="text/javascript" src="Pokemon.js"></script>
