potential meta fix 2

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <meta property="og:title" content="Radouane Bahi's Pokemon Battle" />
-    <meta property="og:image" content="https://radbahi.github.io/pokemon_battle_frontend/pokemon-symbol-logo-png-31.png" />
-    <meta property="og:description" content="A project made by Radouane Bahi and Tom Donovan" />
+    <meta name="image" property="og:image" content="https://radbahi.github.io/pokemon_battle_frontend/pokemon-symbol-logo-png-31.png">
+    <meta name="description" property="og:description" content="A project made by Radouane Bahi and Tom Donovan">
     <head>
-        <title>Pokemon Battle</title>
+        <title>Radouane Bahi's Pokemon Battle</title>
         <link rel="stylesheet" href="styles.css">
         <script type="text/javascript" src="Player.js"></script>
         <script type="text/javascript" src="Pokemon.js"></script>
