--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <meta name="image" property="og:image" content="https://radbahi.github.io/pokemon_battle_frontend/pokemon-symbol-logo-png-31.png">
-    <meta name="description" property="og:description" content="A project made by Radouane Bahi and Tom Donovan">
-    <head>
-        <title>Radouane Bahi's Pokemon Battle</title>
-        <link rel="stylesheet" href="styles.css">
-        <script type="text/javascript" src="Player.js"></script>
-        <script type="text/javascript" src="Pokemon.js"></script>
-        <script type="text/javascript" src="drawBattle.js"></script>
-        <script type="text/javascript" src="battle.js"></script>
-        <script type="text/javascript" src="disOpp.js"></script>
-        <script type="text/javascript" src="index.js"></script>
-        <script type="text/javascript" src="sounds.js"></script>
-    </head>
-    <body id="main-body">
-
-        
-    </body>
+  <meta name="image" property="og:image" content="pokemonbackground.png" />
+  <meta
+    name="description"
+    property="og:description"
+    content="A project made by Radouane Bahi and Tom Donovan"
+  />
+  <head>
+    <title>Radouane Bahi's Pokemon Battle</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="Pokemon.js"></script>
+    <script type="text/javascript" src="drawBattle.js"></script>
+    <script type="text/javascript" src="battle.js"></script>
+    <script type="text/javascript" src="disOpp.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="sounds.js"></script>
+  </head>
+  <body id="main-body"></body>
 </html>
